@@ -3,6 +3,9 @@ What's New in Python 2.6.4rc1
 
 *Release date: XX-Oct-2009*
 
+- OutputWindow/PyShell right click menu "Go to file/line" wasn't working with
+  file paths containing spaces.  Bug 5559.
+
 What's New in Python 2.6.3
 ==========================
 
